TwoWay-View library update > Merge pull request #214 (orientation change fix) to local repository. Initial handling of configuration changes (screen orientation change)

--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
    Copyright (C) 2012 Lucas Rocha
 
    Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,14 +14,16 @@
    limitations under the License.
 -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.lucasr.twowayview"
-          android:versionCode="1"
-          android:versionName="Alpha 1" >
+<manifest
+    package="org.lucasr.twowayview"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:versionCode="1"
+    android:versionName="Alpha 1">
 
-    <uses-sdk android:minSdkVersion="4"
-              android:targetSdkVersion="16" />
+    <uses-sdk
+        android:minSdkVersion="4"
+        android:targetSdkVersion="16" />
 
-    <application/>
+    <application />
 
 </manifest>
